--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
   "homepage": "https://github.com/jevawin/searchthesourcecode.com#readme",
   "dependencies": {
     "@tailwindcss/forms": "^0.5.0",
+    "prismjs": "^1.27.0",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
     "@types/node": "^17.0.23",
+    "@types/prismjs": "^1.26.0",
     "autoprefixer": "^10.4.4",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
