--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "dotenv-webpack": "^7.1.0",
     "prismjs": "^1.27.0",
+    "rimraf": "^3.0.2",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
