--- a/package.json
+++ b/package.json
@@ -41,14 +41,8 @@
   },
   "homepage": "https://github.com/jevawin/searchthesourcecode.com#readme",
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.0",
-    "dotenv-webpack": "^7.1.0",
-    "prismjs": "^1.27.0",
-    "rimraf": "^3.0.2",
-    "tailwindcss": "^3.0.23"
-  },
-  "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
+    "@tailwindcss/forms": "^0.5.0",
     "@types/node": "^17.0.23",
     "@types/prismjs": "^1.26.0",
     "autoprefixer": "^10.4.4",
@@ -62,6 +56,9 @@
     "postcss-loader": "^6.2.1",
     "postcss-minify-selectors": "^5.2.0",
     "postcss-sort-media-queries": "^4.2.1",
+    "prismjs": "^1.27.0",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^3.0.23",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
