--- a/package.json
+++ b/package.json
@@ -66,5 +66,8 @@
     "webpack-assets-manifest": "^5.1.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2"
+  },
+  "devDependencies": {
+    "svg-sprite-loader": "^6.0.11"
   }
 }
