--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "postcss-sort-media-queries": "^4.2.1",
     "prismjs": "^1.27.0",
     "rimraf": "^3.0.2",
+    "svg-sprite-loader": "^6.0.11",
     "tailwindcss": "^3.0.23",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.8",
@@ -66,8 +67,5 @@
     "webpack-assets-manifest": "^5.1.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2"
-  },
-  "devDependencies": {
-    "svg-sprite-loader": "^6.0.11"
   }
 }
