🧑‍💻 waiting for _partials before eleventy --serve

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "dev": "run-p webpack:dev eleventy:dev",
     "preview": "npm run clean && run-p webpack:preview eleventy:preview",
     "build": "npm run clean && run-s webpack:prod eleventy:prod",
-    "eleventy:local": "cross-env NODE_ENV=local eleventy --serve",
-    "eleventy:dev": "cross-env NODE_ENV=development eleventy --serve",
-    "eleventy:preview": "cross-env NODE_ENV=production eleventy --serve",
+    "eleventy:local": "wait-on ./_src/_site/_includes/_partials/preload-styles.njk ./_src/_site/_includes/_partials/scripts.njk ./_src/_site/_includes/_partials/styles.njk && cross-env NODE_ENV=local eleventy --serve",
+    "eleventy:dev": "wait-on ./_src/_site/_includes/_partials/preload-styles.njk ./_src/_site/_includes/_partials/scripts.njk ./_src/_site/_includes/_partials/styles.njk && cross-env NODE_ENV=development eleventy --serve",
+    "eleventy:preview": "wait-on ./_src/_site/_includes/_partials/preload-styles.njk ./_src/_site/_includes/_partials/scripts.njk ./_src/_site/_includes/_partials/styles.njk && cross-env NODE_ENV=production eleventy --serve",
     "eleventy:prod": "eleventy",
     "webpack:local": "cross-env NODE_ENV=local webpack --watch",
     "webpack:dev": "cross-env NODE_ENV=development webpack --watch",
@@ -63,6 +63,7 @@
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
+    "wait-on": "^6.0.1",
     "webpack": "^5.70.0",
     "webpack-assets-manifest": "^5.1.0",
     "webpack-bundle-analyzer": "^4.5.0",
