--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "prismjs": "^1.27.0",
     "rimraf": "^3.0.2",
     "svg-sprite-loader": "^6.0.11",
+    "svgo-loader": "^3.0.0",
     "tailwindcss": "^3.0.23",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.8",
